feat: added some more styles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </article>
     <div class="main__menu-container">
-        <nav style="margin-right: 30%; margin-left: 30%">
+        <nav class="main__menu-nav">
             <a href="" class="main__menu-ref">Weed & Dope</a>
             <a href="" class="main__menu-ref">News</a>
             <a href="" class="main__menu-ref">My Blocks</a>
@@ -55,7 +55,7 @@
                         <h4>Me and Snoop</h4>
                         <p>I <q>Smoke weed everyday</q><br>
                             with uncle Snoop on his mansion...</p>
-                        <button>show more</button>
+                        <button class="news-container__button">show more</button>
                     </div>
                 </section>
                 <section
@@ -69,7 +69,7 @@
                             return 0;
                         </code>
                     </p>
-                    <button>show more</button>
+                    <button class="news-container__button">show more</button>
                 </section>
                 <section
                         class="news-container">
@@ -78,7 +78,7 @@
                     <h4>Em dropped smth new!</h4>
                     <p>Lets listen and check new<br>
                         Eminem's album...</p>
-                    <button>show more</button>
+                    <button class="news-container__button">show more</button>
                 </section>
             </div>
         </div>
