--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <header>
-    <pre>
+    <img class="header__emblem" src="https://cdn141.picsart.com/297894657209211.png">
+    <pre class="header__text">
      __    __     __  __        ______     __         ______     ______     __  __        ______     __         ______     ______
     /\ "-./  \   /\ \_\ \      /\  == \   /\ \       /\  __ \   /\  ___\   /\ \/ /       /\  == \   /\ \       /\  __ \   /\  ___\
     \ \ \-./\ \  \ \____ \     \ \  __<   \ \ \____  \ \  __ \  \ \ \____  \ \  _"-.     \ \  __<   \ \ \____  \ \ \_\ \  \ \ \__ \
@@ -38,12 +39,14 @@
         </div>
     </article>
     <div class="main__menu-container">
-        <nav class="main__menu-nav">
-            <a href="" class="main__menu-ref">Weed & Dope</a>
-            <a href="" class="main__menu-ref">News</a>
-            <a href="" class="main__menu-ref">My Blocks</a>
-            <a href="" class="main__menu-ref"> Rap lyrics</a>
-        </nav>
+        <div class="nav-container">
+            <nav class="main__menu-nav">
+                <button class="main__menu-button">Zaza</button>
+                <button class="main__menu-button">News</button>
+                <button class="main__menu-button">My Blocks</button>
+                <button class="main__menu-button"> Rap lyrics</button>
+            </nav>
+        </div>
         <div>
             <h2>News</h2>
             <div style="display: inline-flex;">
@@ -51,11 +54,13 @@
                         class="news-container">
                     <img src="https://steamuserimages-a.akamaihd.net/ugc/785251538043479466/0C38B9268A544BB7DDC029493C81067C659379CC/?imw=512&amp;imh=288&amp;ima=fit&amp;impolicy=Letterbox&amp;imcolor=%23000000&amp;letterbox=true"
                          style="width: 100%; height: 50%" alt="">
-                    <div>
-                        <h4>Me and Snoop</h4>
-                        <p>I <q>Smoke weed everyday</q><br>
-                            with uncle Snoop on his mansion...</p>
+                    <h4>Me and Snoop</h4>
+                    <p>I <q>Smoke weed everyday</q><br>
+                        with uncle Snoop on his mansion...
+                    </p>
+                    <div class="news-container__button-container">
                         <button class="news-container__button">show more</button>
+                        <button class="news-container__button">put&#10084; like</button>
                     </div>
                 </section>
                 <section
@@ -69,7 +74,10 @@
                             return 0;
                         </code>
                     </p>
-                    <button class="news-container__button">show more</button>
+                    <div class="news-container__button-container">
+                        <button class="news-container__button">show more</button>
+                        <button class="news-container__button">put&#10084; like</button>
+                    </div>
                 </section>
                 <section
                         class="news-container">
@@ -78,7 +86,10 @@
                     <h4>Em dropped smth new!</h4>
                     <p>Lets listen and check new<br>
                         Eminem's album...</p>
-                    <button class="news-container__button">show more</button>
+                    <div class="news-container__button-container">
+                        <button class="news-container__button">show more</button>
+                        <button class="news-container__button">put&#10084; like</button>
+                    </div>
                 </section>
             </div>
         </div>
@@ -102,6 +113,9 @@
             <li><a href="" class="footer-link">visit MineCraft server</a></li>
         </ul>
     </aside>
+    <div class="footer__donate-container">
+        <button class="footer__donate-button">Donate</button>
+    </div>
 </footer>
 
 </body>
