feat: some flex & styles

--- a/index.html
+++ b/index.html
@@ -24,17 +24,15 @@
         <div class="article__information-container">
             <h2> About Me </h2>
             <p>
-                Sup Friends, my name is <strong>Abueweweabubueawewe Osas</strong>.
-                I am from hot country USA.
+                Привет! Мое имя <strong>Abueweweabubueawewe Osas</strong><sup>2</sup>.
+                Я департирован из Африки в АСАШАЙ.
             </p>
             <h2>My story</h2>
             <p>
-                Osas grew up in Compton, surrounded by challenges but supported by a tight-knit community. Despite the
-                struggles of life in a tough neighborhood, he found strength in basketball, quickly becoming known for
-                his skill and determination. The game became his way out, and with hard work, he earned a college
-                scholarship. Osas' dream was to make it to the NBA, not only for himself but to uplift his family and
-                inspire others from Compton. His journey shows that no matter where you start, your drive and resilience
-                can shape your future.
+                В африканской деревне жил парень по имени Осас. Он нашёл магический камень, который исполнял одно
+                желание. Вместо богатства Осас пожелал счастья и процветания для своей деревни. Наутро все колодцы
+                наполнились чистой водой, земля стала плодородной, а урожай вырос. Деревня зажила богато, а Осаса
+                уважали как мудрого лидера, изменившего судьбу своего народа.
             </p>
         </div>
     </article>
@@ -47,7 +45,7 @@
                 <button class="main__menu-button"> Rap lyrics</button>
             </nav>
         </div>
-        <div>
+        <div style="border-top: black 1px solid">
             <h2>News</h2>
             <div style="display: inline-flex;">
                 <section
@@ -62,6 +60,7 @@
                         <button class="news-container__button">show more</button>
                         <button class="news-container__button">put&#10084; like</button>
                     </div>
+                    <p>likes: 0</p>
                 </section>
                 <section
                         class="news-container">
@@ -78,6 +77,7 @@
                         <button class="news-container__button">show more</button>
                         <button class="news-container__button">put&#10084; like</button>
                     </div>
+                    <p>likes: 0</p>
                 </section>
                 <section
                         class="news-container">
@@ -90,6 +90,7 @@
                         <button class="news-container__button">show more</button>
                         <button class="news-container__button">put&#10084; like</button>
                     </div>
+                    <p>likes: 0</p>
                 </section>
             </div>
         </div>
@@ -113,8 +114,20 @@
             <li><a href="" class="footer-link">visit MineCraft server</a></li>
         </ul>
     </aside>
-    <div class="footer__donate-container">
-        <button class="footer__donate-button">Donate</button>
+    <div class="footer__heart-container">
+        <pre>
+   ▄▄▄▄▄▄     ▄▄▄▄▄▄
+ ▄█▓▓▓▓▓▓█▄─▄█▓▓▓▓▓▓█▄
+ █▓▓▒▒▒▒▒▓▓█▓▓▒▒▒▒▒▓▓█▌
+█▓▓▒▒░╔╗╔═╦═╦═╦═╗░▒▒▓▓█
+█▓▓▒▒░║╠╣╬╠╗║╔╣╩╣░▒▒▓▓█
+ █▓▓▒▒╚═╩═╝╚═╝╚═╝▒▒▓▓█▌
+ ▀█▓▓▒▒░░░░░░░░░▒▒▓▓█▀
+   ▀█▓▓▒▒░░░░░▒▒▓▓█▀
+     ▀█▓▓▒▒░▒▒▓▓█▀
+       ▀█▓▓▒▓▓█▀
+         ▀█▓█▀
+        </pre>
     </div>
 </footer>
 
